--- a/src/main/resources/assets/presstowalk/lang/en_us.json
+++ b/src/main/resources/assets/presstowalk/lang/en_us.json
@@ -2,9 +2,9 @@
   "text.autoconfig.presstowalk.option.forceSprint": "Force Sprint",
   "text.autoconfig.presstowalk.title": "Press To Walk",
   "text.autoconfig.presstowalk.category.default": "Main",
-  "key.presstowalk.walk": "Toggle Walking",
+  "presstowalk.walk": "Toggle Walking",
   "presstowalk.category": "Press To Walk",
-  "key.presstowalk.mine": "Toggle Mining Mode",
+  "presstowalk.mine": "Toggle Mining Mode",
   "presstowalk.mining.on": "Mining Mode toggled §aon!",
   "presstowalk.mining.off": "Mining Mode toggled §coff!",
   "presstowalk.autowalkstarted": "Auto Walk §astarted",
